--- a/project/crm_app/templates/crm_app/sdelki.html
+++ b/project/crm_app/templates/crm_app/sdelki.html
@@ -24,7 +24,8 @@
 
 
 
-<p ><a href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
+
+    <p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
     {% endfor %}<hr>
 
 
