--- a/project/crm_app/static/crm_app/css/styles.css
+++ b/project/crm_app/static/crm_app/css/styles.css
@@ -4,6 +4,14 @@ body {
 
 }
 
+li {
+  list-style-type:  none;
+}
+
+hr {
+    color: green;
+}
+
 .mainmenu {
     background-color: #e1f4db;
     padding:10px;
@@ -128,6 +136,10 @@ p#hh {
 
 /*кнопка посмотреть подробней */
 
-
+.borders {
+    border: 2px solid #f1c40f;
+     margin: 10px 20px;
+     padding: 10px 30px;
+}
 
 
