--- a/project/crm_app/templates/crm_app/supplyers.html
+++ b/project/crm_app/templates/crm_app/supplyers.html
@@ -31,7 +31,7 @@
     <li>{{c.address}} </li>
     <li>{{c.created}} </li>
     <li>{{c.updated}} </li>
-<p><a href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
+<p><a hre<p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
     {% endfor %}<hr>
 </ul>
 </div>
