--- a/project/crm_app/templates/crm_app/supplyer.html
+++ b/project/crm_app/templates/crm_app/supplyer.html
@@ -13,17 +13,85 @@
 <div class="centercontent"><ul>
 
         <h3>{{supplyer.company_name}}</h3>
-    <li>{{supplyer.contact_name}}</li>
-    <li>{{supplyer.email}} </li>
-    <li>{{supplyer.phone}}</li>
-    <li>{{supplyer.address}} </li>
-    <li>{{supplyer.created}} </li>
-    <li>{{supplyer.supplyer_status}} </li>
-    <li><a href="#">sdelki v kotoryh uchavstvuet - количество</a></li>
-    <li><a href="#">документы </a></li>
+    <li>Контакт с сотрудником: {{supplyer.contact_name}}</li>
+    <li>Email Перевозчика: {{supplyer.email}} </li>
+    <li>Телефон:{{supplyer.phone}}</li>
+    <li>Адрес: {{supplyer.address}} </li>
 
-<p ><a href="{% url 'update_supplyer' supplyer.id  %}">Редактировать</a></p>
-    <td align = 'right'><a href="{% url 'delete_supplyer' supplyer.id %}">Удалить</a></td>
+    <li>{{supplyer.created}} </li>
+    <li>{{supplyer.supplyer_status}}
+
+
+   <h3>Сделки, в которых учавствует Перевозчик:</h3>
+        <!--
+        {{ supplyer.stavka1.all }} <br>
+        {{ supplyer.stavka2.all}}<br>
+        {{ supplyer.stavka3.all }}<br>
+        {{ supplyer.stavka4.all }}<br>
+        {{ supplyer.stavka5.all }}<br>
+        {{ supplyer.stavka6.all }}<br>
+        {{ supplyer.stavka7.all }}<br>
+        {{ supplyer.stavka8.all }}<br>
+        {{ supplyer.stavka9.all }}<br>
+        {{ supplyer.stavka10.all }}<br>-->
+
+
+    {% for s in supplyer.stavka1.all %}
+      <p><a href="{% url 'show_sdelka' s.pk %}">Сделка № {{s.number}}</a></p>
+
+    {% endfor %}
+      {% for s in supplyer.stavka2.all %}
+      <p><a href="{% url 'show_sdelka' s.pk %}">Сделка № {{s.number}}</a></p>
+
+    {% endfor %}
+        {% for s in supplyer.stavka2.all %}
+      <p><a href="{% url 'show_sdelka' s.pk %}">Сделка № {{s.number}}</a></p>
+
+    {% endfor %}
+        {% for s in supplyer.stavka4.all %}
+      <p><a href="{% url 'show_sdelka' s.pk %}">Сделка № {{s.number}}</a></p>
+
+    {% endfor %}
+        {% for s in supplyer.stavka5.all %}
+      <p><a href="{% url 'show_sdelka' s.pk %}">Сделка № {{s.number}}</a></p>
+
+    {% endfor %}
+        {% for s in supplyer.stavka6.all %}
+      <p><a href="{% url 'show_sdelka' s.pk %}">Сделка № {{s.number}}</a></p>
+
+    {% endfor %}
+        {% for s in supplyer.stavka7.all %}
+      <p><a href="{% url 'show_sdelka' s.pk %}">Сделка № {{s.number}}</a></p>
+
+    {% endfor %}
+        {% for s in supplyer.stavka8.all %}
+      <p><a href="{% url 'show_sdelka' s.pk %}">Сделка № {{s.number}}</a></p>
+
+    {% endfor %}
+        {% for s in supplyer.stavka9.all %}
+      <p><a href="{% url 'show_sdelka' s.pk %}">Сделка № {{s.number}}</a></p>
+
+    {% endfor %}
+        {% for s in supplyer.stavka10.all %}
+      <p><a href="{% url 'show_sdelka' s.pk %}">Сделка № {{s.number}}</a></p>
+
+    {% endfor %}
+
+
+     <br>
+   <h3>Документы:</h3>
+    {% for d in doc_cl %}
+
+   <p> {{d.type}}: <a href="{{d.file.url}}">{{d.sdelka}}</a></li></p>
+
+    {% endfor %}
+    <br>
+<hr>
+
+
+
+    <button><a href="{% url 'update_supplyer' supplyer.id  %}">Редактировать</a></button>
+    <button><td align = 'right'><a href="{% url 'delete_supplyer' supplyer.id %}">Удалить</a></td></button>
 
 </ul>
 </div>
