--- a/project/crm_app/templates/crm_app/operations.html
+++ b/project/crm_app/templates/crm_app/operations.html
@@ -17,6 +17,11 @@
 </div>
 
 <div class="centercontent">
+
+    {{euro}}
+    {{euro_insdelka}}
+
+
     {% for c in operationss %}
         <h3>{{c.key}}</h3>
 
