--- a/project/crm_app/templates/crm_app/supplyers.html
+++ b/project/crm_app/templates/crm_app/supplyers.html
@@ -25,13 +25,15 @@
 
     {% for c in supplyers %}
         <h3>{{c.company_name}}</h3>
+    <li>{{c.id}}</li>
     <li>{{c.contact_name}}</li>
+     <li>Надежный: {{c.supplyer_status}}</li>
     <li>{{c.email}} </li>
     <li>{{c.phone}}</li>
     <li>{{c.address}} </li>
     <li>{{c.created}} </li>
     <li>{{c.updated}} </li>
-<p><a hre<p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
+<p ><a class="double-border-button" href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
     {% endfor %}<hr>
 </ul>
 </div>
