poisk v diapasone dat

--- a/project/crm_app/templates/crm_app/sdelka_filter.html
+++ b/project/crm_app/templates/crm_app/sdelka_filter.html
@@ -16,6 +16,7 @@
     <a href="{% url 'sdelka_filter' pk=3 %}"><button>all</button></a>
 
 
+    <br>{{sdelki}}
 
     <button class="addbutton"><a href="{% url 'add_sdelka' %}">Добавить сделку</a></button>
 
