--- a/project/crm_app/templates/crm_app/sdelka.html
+++ b/project/crm_app/templates/crm_app/sdelka.html
@@ -16,6 +16,8 @@
 
 
 <div class="borders">
+
+    <li>age: {{sdelka.age}}</li>
     <li>от {{sdelka.time_create}}</li>
     <li>Описание потребности: {{sdelka.description}}</li>
     <li>Заказчик: {{sdelka.client}}</li>
