--- a/project/crm_app/templates/crm_app/index.html
+++ b/project/crm_app/templates/crm_app/index.html
@@ -1,6 +1,14 @@
 {% extends 'crm_app/base.html' %}
 
 {%block content%}
-<h1>{{title}}</h1>
-<p id="text">Содерж гл стр</p>
+<div class="left-bar"><ul>
+
+
+
+
+</div>
+
+
+<div class="centercontent">
+</div>
 {%endblock content%}
