--- a/project/crm_app/static/crm_app/css/styles.css
+++ b/project/crm_app/static/crm_app/css/styles.css
@@ -28,12 +28,13 @@ h1{text-align: center;}
 
 .container {
     display: flex;
+
 }
 
 .left-bar{
     width:30%;
     target: 30px;
-    list-style-type: none
+    list-style-type: none;
 
 }
 
@@ -46,6 +47,12 @@ h1{text-align: center;}
 .centercontent{
     background-color: ligthgrey;
     width:65%;
+
+}
+
+.search-right {
+    justify-content: flex-end;
+
 
 }
 
@@ -140,6 +147,12 @@ p#hh {
     border: 2px solid #f1c40f;
      margin: 10px 20px;
      padding: 10px 30px;
+}
+
+
+.poisk_table{
+    display:flex;
+    justify-content: space-between;
 }
 
 
