--- a/project/crm_app/templates/crm_app/base.html
+++ b/project/crm_app/templates/crm_app/base.html
@@ -1,6 +1,6 @@
 {% load static %}
+{% load crm_app_tags %}
 
-<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -31,10 +31,14 @@
 
 <div class="container">
 {%block content%}
+    <p>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
 {%endblock content%}
 </div>
 
-
+<div class="footage">
+{%block footage%}
+{% endblock footage %}
+</div>
 <script src="{% static 'crm_app/js/script.js' %}"></script>
 
 </body>
