--- a/project/crm_app/templates/crm_app/supplyers_for_period.html
+++ b/project/crm_app/templates/crm_app/supplyers_for_period.html
@@ -23,7 +23,7 @@
 <ul>
 
     <h4>перевозчики за период:</h4>
-    <h3>с: {{fromdate}} по: {{todate}}</h3>
+    <h3 class="choicetitle">с: {{fromdate}} по: {{todate}}</h3>
 {% for r in result %}
      <li> {{r.company_name}} </li>
    <li>создан:  {{r.time_create}} </li>
