--- a/project/crm_app/static/crm_app/css/styles.css
+++ b/project/crm_app/static/crm_app/css/styles.css
@@ -156,4 +156,21 @@ p#hh {
     justify-content: space-between;
 }
 
+.c {
+  color: green;
+  background: pink;
 
+}
+.c:active {
+  background: green;
+  outline: none;
+  box-shadow: 0 0 0 4px #cbd6ee;
+}
+
+button:active {
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, .5);
+   }
+
+.choicetitle {
+    color: teal;
+}
