--- a/project/crm_app/templates/crm_app/supplyer_list.html
+++ b/project/crm_app/templates/crm_app/supplyer_list.html
@@ -23,7 +23,7 @@
     <br>
     <hr>
 
-    <h3>Результат поиска: " {{q}} "</h3>
+    <h3 class="choicetitle">Результат поиска: " {{q}} "</h3>
 
 
 
