--- a/project/crm_app/templates/crm_app/base.html
+++ b/project/crm_app/templates/crm_app/base.html
@@ -37,6 +37,9 @@
 
 <div class="footage">
 {%block footage%}
+    <br>
+<center> Copyright (c) {{now_year}} </center>
+    <br>
 {% endblock footage %}
 </div>
 <script src="{% static 'crm_app/js/script.js' %}"></script>
