--- a/project/crm_app/templates/crm_app/sdelki_for_period.html
+++ b/project/crm_app/templates/crm_app/sdelki_for_period.html
@@ -4,7 +4,7 @@
 
 
 <div class="left-bar"><ul>
-    {%for c in contragentss %}
+    {%for c in operationss %}
 
     <li><a href="{% url c.url_name %}">{{c.title}}</a></li>
 
@@ -13,7 +13,7 @@
 </div>
 
 <div class="centercontent"><ul>
-    <button class="addbutton"><a href="{% url 'add_supplyer' %}">Добавить Перевозчика</a></button>
+    <button class="addbutton"><a href="{% url 'add_client' %}">Добавить Заказчика</a></button>
      {% for msg in messages %}
     <div class="success">{{msg}}</div>
     {% endfor %}
@@ -22,12 +22,12 @@
 
 <ul>
 
-    <h4>перевозчики за период:</h4>
+    <h4>Заказчики за период:</h4>
     <h3 class="choicetitle">с: {{fromdate}} по: {{todate}}</h3>
 {% for r in result %}
-     <li> {{r.company_name}} </li>
+     <li> {{r.client}} </li>
    <li>создан:  {{r.time_create}} </li>
-    <li>{{r.address}} </li>
+    <li>{{r.description}} </li>
     <p ><a class="double-border-button" href="{{ r.get_absolute_url }}">Посмотреть подробней</a></p>
     <hr>
 {%endfor%}
