--- a/project/crm_app/templates/crm_app/supplyers_search.html
+++ b/project/crm_app/templates/crm_app/supplyers_search.html
@@ -1,17 +1,11 @@
 {% extends 'crm_app/base.html' %}
-
+{% load crm_app_tags %}
 {%block content%}
-
-
-
 
 <div class="left-bar"><ul>
     {%for c in contragentss %}
-
     <li><a href="{% url c.url_name %}">{{c.title}}</a></li>
-
     {%endfor%}</ul>
-
 </div>
 
 <div class="centercontent"><ul>
@@ -20,12 +14,12 @@
     <div class="success">{{msg}}</div>
     {% endfor %}
 <ul>
-<h4>самый ранний перевозчик:</h4>
+<h4>Самый ранний Перевозчик:</h4>
    <li> {{earlier_supplyer.company_name}} </li>
    <li> {{earlier_supplyer.time_create}} </li>
     <li>{{earlier_supplyer.address}} </li>
     <p ><a class="double-border-button" href="{{ earlier_supplyer.get_absolute_url }}">Посмотреть подробней</a></p>
- <h4>самый поздний перевозчик:</h4>
+ <h4>Самый поздний Перевозчик:</h4>
    <li> {{latest_supplyer.company_name}} </li>
    <li> {{latest_supplyer.time_create}} </li>
     <li>{{latest_supplyer.address}} </li>
